fix(display): Fix horizontal scrolling in main display if screen too small

--- a/root/frontend/react-src/src/App.scss
+++ b/root/frontend/react-src/src/App.scss
@@ -9,6 +9,7 @@ main {
     background-color: #f6f6f6;
     flex-grow: 1;
     order: 1;
+    overflow-x: auto;
 }
 
 nav {
